--- a/Algebra.tex
+++ b/Algebra.tex
@@ -133,7 +133,7 @@
 \tableofcontents
 
 \bigskip
-Per tutto quello che riguarda gli interi di Gauss, rifarsi a \href{http://www.math.uconn.edu/~kconrad/blurbs/ugradnumthy/Zinotes.pdf}{\texttt{kconrad}}.
+\textsf{\textbf{Due parole introduttive.} Il lettore potrebbe chiedersi, legittimamente, per quale ragione al mondo questi appunti siano stati organizzati in modo tanto elaborato, impreciso, incompleto e poco scorrevole: l'autore è partecipe di tanta perplessità.}
 
 \restoregeometry
 
